--- a/ToDoList/src/styles.css
+++ b/ToDoList/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background: black;
+    color: white;
+}
+.btn-outline-secondary {
+    background: rgb(30, 109, 19);
+    color: black;
+}
+input[type=text], textarea {
+    background: black;
+    color: rgb(30, 109, 19)
+}
