--- a/ToDoList/src/app/app.component.html
+++ b/ToDoList/src/app/app.component.html
@@ -13,11 +13,15 @@
           
         </thead>
         <tbody>
+          <!-- lots of todos -->
           <tr *ngFor="let todo of todos">
-            <td>{{ todo }}</td><td><button (click)="editToDo(todo)" type="button" class="btn btn-success">Edit</button></td><td><button (click)="deleteToDo(todo)" type="button" class="btn btn-danger">Delete</button></td>
+            <td><input type="checkbox" [(ngModel)]="todo.isChecked"></td><td><span [ngClass]="{'strike':todo.isChecked}">{{ todo.name }}</span></td><td><button (click)="editToDo(todo)" type="button" class="btn btn-success">Edit</button></td><td><button (click)="deleteToDo(todo)" type="button" class="btn btn-danger">Delete</button></td>
           </tr>
         </tbody>
       </table>
+      <div>
+        <button (click)="deleteAll()" type="button" class="btn btn-danger">Delete All</button>
+      </div>
     </div>
   </div>
 </div>  
